Get the first version

--- a/src/Complete Pipeline.ipynb
+++ b/src/Complete Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e176d813-a3a0-4713-aa5f-90c2e79d494d",
    "metadata": {},
    "outputs": [],
@@ -16,16 +16,15 @@
     "import time\n",
     "import tiktoken\n",
     "from dotenv import load_dotenv\n",
-    "from evaluation.evaluation import AdherenceEvaluation\n",
-    "from utils.openai_api import get_openai_response, get_openai_response_content"
+    "from utils.openai_api import get_openai_response, get_openai_response_content\n",
+    "import sys\n",
+    "sys.path.append(os.path.join(sys.path[0], '..'))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "872163cb-fc4d-4bf2-a83d-620b4dd521f8",
+   "cell_type": "markdown",
+   "id": "f05c6a3f-f118-4095-abcf-77b817c23c31",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Generate Conversations\n",
     "- Run generate_conversations.py in the command line"
@@ -33,43 +32,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "48298dbc-e7b5-4d80-a1c3-601aaa6d8fa9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.environ['OPENAI_API_KEY'] = '12858f5908ee4b17b986977b35d604dd'\n",
+    "os.environ['MODEL_DEPLOYMENT'] = 'gpt4-1106'\n",
+    "os.environ['OAI_ENDPOINT'] = 'dbt-openai-usea2-assistants'\n",
+    "#logging.basicConfig(level=logging.DEBUG)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "1ca197a4-7e5d-4830-9828-ee04313979c4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'eval_messages'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-0925841fc66e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./convo_generation/output/result.pickle'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'result'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'eval_messages'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 'eval_messages'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for key, value in pd.read_pickle('./convo_generation/output/result.pickle').items():\n",
+    "#src/convo_generation/output/20240306_convos_full.pickle\n",
+    "test = pd.read_pickle('./convo_generation/output/20240306_convos_full.pickle')\n",
+    "for key, value in pd.read_pickle('./convo_generation/output/20240306_convos_full.pickle').items():\n",
     "    a = value['result']['eval_messages']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "e6cb1992-2ef0-4449-862d-876a739a81b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conversation = test['bc97e560-2f17-40c6-bbbc-cf1455e5536b']['result']['eval_messages']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ac783e0d-e7ef-48bb-b09e-2f1b0deddd53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convdf = pd.DataFrame.from_dict([{'conversation_id': 'bc97e560-2f17-40c6-bbbc-cf1455e5536b', 'conversation': conversation}])\n",
+    "convdf.to_csv('test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "40cfa650-343d-4684-967b-81f4a60dd1c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run Evals"
+    "# Run Evals\n",
+    "from evaluation.evaluation_pipeline import run_evaluations"
    ]
   },
   {
@@ -77,15 +93,30 @@
    "execution_count": null,
    "id": "15e542d1-4d3a-4a01-88c6-5014b52cabcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-03-26 18:15:06,188 - adherence_evaluation - INFO: Running iteration 0\n",
+      "2024-03-26 18:15:06,191 - adherence_evaluation - INFO: Running criterion: Organize by Targets (1/23)\n",
+      "2024-03-26 18:15:07,047 - adherence_evaluation - INFO: Running criterion: Emotion Focus (2/23)\n",
+      "2024-03-26 18:15:14,103 - adherence_evaluation - INFO: Running criterion: Describe Specifically (3/23)\n",
+      "2024-03-26 18:15:14,646 - adherence_evaluation - INFO: Running criterion: Chain Analysis (4/23)\n",
+      "2024-03-26 18:15:16,107 - adherence_evaluation - INFO: Running criterion: Teach New Information (5/23)\n",
+      "2024-03-26 18:15:21,598 - adherence_evaluation - INFO: Running criterion: Generate Solutions (6/23)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Run Analysis"
+    "# Run Analysis\n",
+    "run_evaluations('test.csv', 'adherence_result.json')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -99,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
