added markdown for evals

--- a/src/Complete Pipeline.ipynb
+++ b/src/Complete Pipeline.ipynb
@@ -91,6 +91,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Adherence"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "942a5edb-3632-47de-a62e-bc1ba30473f4",
@@ -10072,6 +10081,15 @@
    "source": [
     "adherence_results_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Skill Presence"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
