more work on processing skills

--- a/src/Complete Pipeline.ipynb
+++ b/src/Complete Pipeline.ipynb
@@ -10227,21 +10227,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "outputs": [
     {
      "data": {
       "text/plain": "                                     detected_skill_ids\nconversation_id                                        \nbc97e560-2f17-40c6-bbbc-cf1455e5536b              [DT3]\n817c2b6f-51bf-401c-8b06-cdf9f83b5948                 []\na26af177-cf8b-41f0-b286-3a1f536544af                 []\n4f57e28b-1c11-437c-a067-a725c3b3dd32               [M8]\n8ad366a9-643d-4a93-8716-f7df4447d79e          [M3, IE2]\n...                                                 ...\n1551bb94-6070-498f-a011-9407ed545c45          [M3, IE2]\n6ac0e128-495a-4244-b60e-642e11cca7ea              [IE3]\n711d32a0-4594-498f-9a2b-5f93f2346da7              [DT7]\n31ee6726-f6d0-453f-9482-4e36b8dbdc04              [ER4]\nfeed36a3-d156-49b7-8f8d-d174472daa0d              [DT7]\n\n[81 rows x 1 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>detected_skill_ids</th>\n    </tr>\n    <tr>\n      <th>conversation_id</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bc97e560-2f17-40c6-bbbc-cf1455e5536b</th>\n      <td>[DT3]</td>\n    </tr>\n    <tr>\n      <th>817c2b6f-51bf-401c-8b06-cdf9f83b5948</th>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>a26af177-cf8b-41f0-b286-3a1f536544af</th>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>4f57e28b-1c11-437c-a067-a725c3b3dd32</th>\n      <td>[M8]</td>\n    </tr>\n    <tr>\n      <th>8ad366a9-643d-4a93-8716-f7df4447d79e</th>\n      <td>[M3, IE2]</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1551bb94-6070-498f-a011-9407ed545c45</th>\n      <td>[M3, IE2]</td>\n    </tr>\n    <tr>\n      <th>6ac0e128-495a-4244-b60e-642e11cca7ea</th>\n      <td>[IE3]</td>\n    </tr>\n    <tr>\n      <th>711d32a0-4594-498f-9a2b-5f93f2346da7</th>\n      <td>[DT7]</td>\n    </tr>\n    <tr>\n      <th>31ee6726-f6d0-453f-9482-4e36b8dbdc04</th>\n      <td>[ER4]</td>\n    </tr>\n    <tr>\n      <th>feed36a3-d156-49b7-8f8d-d174472daa0d</th>\n      <td>[DT7]</td>\n    </tr>\n  </tbody>\n</table>\n<p>81 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# converting json dataset from dictionary to dataframe\n",
-    "skill_presence_results_df = pd.DataFrame.from_records(\n",
+    "skills_detected_df = pd.DataFrame.from_records(\n",
     "    skill_presence_results_dict\n",
     ").set_index('conversation_id'\n",
     ").drop(\n",
@@ -10252,7 +10252,7 @@
     "    axis=1,\n",
     ")\n",
     "\n",
-    "skill_presence_results_df"
+    "skills_detected_df"
    ],
    "metadata": {
     "collapsed": false
@@ -10273,7 +10273,10 @@
     }
    ],
    "source": [
-    "prompts_df = pd.read_csv('./data/prompts_with_ids.tsv', delimiter='\\t')\n",
+    "prompts_df = pd.read_csv(\n",
+    "    './data/prompts_with_ids.tsv',\n",
+    "    delimiter='\\t',\n",
+    ")\n",
     "prompts_df['target_skill_ids'] = prompts_df['Target Skill IDs'].apply(ast.literal_eval)\n",
     "prompts_df"
    ],
